; ModuleID = '/home/carl/AnghaBench/openssl/crypto/async/extr_async.c_async_delete_thread_state.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/async/extr_async.c_async_delete_thread_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@poolkey = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @async_delete_thread_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @async_delete_thread_state(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call i64 @CRYPTO_THREAD_get_local(i32* @poolkey)
  %5 = inttoptr i64 %4 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = icmp ne %struct.TYPE_4__* %6, null
  br i1 %7, label %8, label %18

8:                                                ; preds = %1
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = call i32 @async_empty_pool(%struct.TYPE_4__* %9)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @sk_ASYNC_JOB_free(i32 %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = call i32 @OPENSSL_free(%struct.TYPE_4__* %15)
  %17 = call i32 @CRYPTO_THREAD_set_local(i32* @poolkey, i32* null)
  br label %18

18:                                               ; preds = %8, %1
  %19 = call i32 (...) @async_local_cleanup()
  %20 = call i32 (...) @async_ctx_free()
  ret void
}

declare dso_local i64 @CRYPTO_THREAD_get_local(i32*) #1

declare dso_local i32 @async_empty_pool(%struct.TYPE_4__*) #1

declare dso_local i32 @sk_ASYNC_JOB_free(i32) #1

declare dso_local i32 @OPENSSL_free(%struct.TYPE_4__*) #1

declare dso_local i32 @CRYPTO_THREAD_set_local(i32*, i32*) #1

declare dso_local i32 @async_local_cleanup(...) #1

declare dso_local i32 @async_ctx_free(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
